solved little warnings and small bugs